Patch by Swapna P <spottabathini@innominds.com> on 2012-05-14 Reviewed by Eric Seidel.

Bug: Cannot resize frames because frameborder=0
https://bugs.webkit.org/show_bug.cgi?id=23750

Source/WebCore:

Removed check for frameborder, in order to allow resize of frames even in case of frameborder=0.

Test: fast/frames/frames-with-frameborder-zero-can-be-resized.html

* rendering/RenderFrameSet.cpp:
(WebCore::RenderFrameSet::startResizing):
(WebCore::RenderFrameSet::canResizeRow):
(WebCore::RenderFrameSet::canResizeColumn):

LayoutTests:

Added test case to test whether the frame can be resized when frameborder=0.

* fast/frames/frames-with-frameborder-zero-can-be-resized-expected.txt: Added.
* fast/frames/frames-with-frameborder-zero-can-be-resized.html: Added.

Canonical link: https://commits.webkit.org/103973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116978 268f45cc-cd09-0410-ab3c-d52691b4dbfc